@@ -15,6 +15,10 @@ http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).
 Eventually this branch will be merged with the development on the
 trunk of the CVS tree.
 
+6/12/2001: cheetah (william fulton)
+	   Some Java documentation added.
+	   [Java] Fixed bugs in import pragma and shadow pragma. 
+
 6/12/2001: mkoeppe
 	   Fix declarations of SWIG_define_class
 	   (Lib/ruby/rubydec.swg) and SWIG_TypeQuery
